Projektseiten auf JDK 25 und scratch 5.3.0 umgestellt, BlueJ entfernt